@@ -1,3 +1,10 @@
+2006-06-15 Added scalex and scaley to Axes.autoscale_view to support
+           selective autoscaling just the x or y axis, and supported
+           these command in plot so you can say plot(something,
+           scaley=False) and just the x axis will be autoscaled.
+           Modified axvline and axhline to support this, so for
+           example axvline will no longer autoscale the y axis. JDH
+
 2006-06-13 Fix so numpy updates are backward compatible - TEO
 
 2006-06-12 Updated numerix to handle numpy restructuring of
